fix errors and new tests